--- a/elearning/login.html
+++ b/elearning/login.html
@@ -9,18 +9,16 @@
 </head>
 <body>
    
-    <form action="" id="login">
+    <form id="login">
         <div id="main">
             <nav>
             <div id="left">
-                 <img src="C:\Users\prasanna\Downloads\course website\Welcome Back !.png" alt="">
+                 <img id="ab" src="C:\Users\prasanna\Downloads\course website\Welcome Back !.png" alt="">
                  <br>
-                 <br>
-                 <br><br><br>
-               <img src="C:\Users\prasanna\Downloads\course website\Login To Join Learn Kolupu courses.png" alt="">
-                <br><br><br><button id="sign">SIGN UP</button>
+               <img  id="ab" src="C:\Users\prasanna\Downloads\course website\Login To Join Learn Kolupu courses.png" alt="">
+              <button type="submit" id="sign">SIGN UP</button>
             </div>
-                        <div id="right">
+                <div id="right">
                 <img src="C:\Users\prasanna\Downloads\course website\Create Account.png" alt="">
                 <br><br><br>
                 <ul style="display:flex ;"><li>
@@ -44,7 +42,7 @@
                 <img src="C:\Users\prasanna\Downloads\course website\icons8-password-24 1.png" alt=""><input id="no" type="password" placeholder="Password"> </div>
             <br>
             <br><br><br>
-            <button id="login">LOGIN</button>
+            <button type="submit" id="login">LOGIN</button>
           </div>
             </div>
         </div> </nav>
